Improve grahics and scaling
We have been observed lots of issues with the rendering of the
UI and its scaling with several resolutions, with 4K being a
particularly problematic resolution.

This commit improves the readability, rendering and scaling of the
UI.

Signed-off-by: Fabrizio Castro <fabrizio.castro.jz@renesas.com>
Signed-off-by: Gareth Williams <gareth.williams.jx@renesas.com>

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -222,7 +222,7 @@
     <item row="0" column="8">
      <widget class="QCheckBox" name="checkBoxContinuous">
       <property name="sizePolicy">
-       <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+       <sizepolicy hsizetype="MinimumExpanding" vsizetype="Minimum">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
