--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -264,6 +264,24 @@
       </property>
      </widget>
     </item>
+    <item row="1" column="6">
+     <widget class="QLabel" name="labelFps">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+        <horstretch>1</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>19</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>FPS:</string>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menuBar">
