ui: Increase drop down menu font size
The drop down menu options had a small font. By increasing the font
size, readability has been improved.
Signed-off-by: Ayman Chaudhry <ayman.chaudhry.kc@renesas.com>

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -16,6 +16,11 @@
     <verstretch>0</verstretch>
    </sizepolicy>
   </property>
+  <property name="font">
+   <font>
+    <pointsize>13</pointsize>
+   </font>
+  </property>
   <property name="focusPolicy">
    <enum>Qt::NoFocus</enum>
   </property>
@@ -326,7 +331,7 @@
      <x>0</x>
      <y>0</y>
      <width>1612</width>
-     <height>22</height>
+     <height>25</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuAbout">
