--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -135,6 +135,9 @@
       <property name="minimum">
        <number>1</number>
       </property>
+      <property name="maximum">
+       <number>15</number>
+      </property>
       <property name="value">
        <number>2</number>
       </property>
