--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -235,6 +235,24 @@ Basket</string>
      <string>Inference Engine:</string>
     </property>
    </widget>
+   <widget class="QLabel" name="labelTotalItems">
+    <property name="geometry">
+     <rect>
+      <x>940</x>
+      <y>110</y>
+      <width>141</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>19</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Total Items:</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
