ui: Add Renesas RZ logo
The Renesas RZ logo is displayed on the top left of the application.
Signed-off-by: Ayman Chaudhry <ayman.chaudhry.kc@renesas.com>

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -301,6 +301,37 @@ Basket</string>
      <bool>false</bool>
     </property>
    </widget>
+   <widget class="QLabel" name="labelRzLogo">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>10</y>
+      <width>130</width>
+      <height>45</height>
+     </rect>
+    </property>
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+      <horstretch>0</horstretch>
+      <verstretch>0</verstretch>
+     </sizepolicy>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>130</width>
+      <height>45</height>
+     </size>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>130</width>
+      <height>45</height>
+     </size>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
