Add OV5645 features setting as menu items
The OV5645 MIPI CSI camera allows for feature setting using V4L2. Auto white
balance, auto gain and auto exposure are among these that can be usful
during demostations to allow the user to configure. We should expose
them to the user only when using a MIPI CSI camera.

Signed-off-by: Gareth Williams <gareth.williams.jx@renesas.com>

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -361,8 +361,17 @@ Basket</string>
     </property>
     <addaction name="actionEnable_ArmNN_Delegate"/>
    </widget>
+   <widget class="QMenu" name="menuCam_Settings">
+    <property name="title">
+     <string>Camera Settings</string>
+    </property>
+    <addaction name="actionAuto_Gain"/>
+    <addaction name="actionAuto_Exposure"/>
+    <addaction name="actionAuto_White_Balance"/>
+   </widget>
    <addaction name="menuAbout"/>
    <addaction name="menuInference"/>
+   <addaction name="menuCam_Settings"/>
   </widget>
   <action name="actionLicense">
    <property name="text">
@@ -391,6 +400,21 @@ Basket</string>
   <action name="actionHardware">
    <property name="text">
     <string>Hardware</string>
+   </property>
+  </action>
+  <action name="actionAuto_Gain">
+   <property name="text">
+    <string>Disable Auto Gain</string>
+   </property>
+  </action>
+  <action name="actionAuto_Exposure">
+   <property name="text">
+    <string>Disable Auto Exposure</string>
+   </property>
+  </action>
+  <action name="actionAuto_White_Balance">
+   <property name="text">
+    <string>Disable Auto White Balance</string>
    </property>
   </action>
  </widget>
